# r2x-reeds

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.html  README.md  _test_parser.py  genindex.html  index.html  objects.inv  pyproject.toml  searchindex.js
.doctrees/: CHANGELOG.doctree  environment.pickle  index.doctree
.doctrees/references/: api.doctree  index.doctree
.github/workflows/: ci.yaml  docs.yaml  release.yaml
_modules/: index.html
_modules/r2x_reeds/: config.html  parser.html
_modules/r2x_reeds/models/: components.html  enums.html
_sources/: CHANGELOG.md.txt
docs/source/: conf.py  index.md
docs/source/references/: index.md
references/: api.html  index.html
src/r2x_reeds/: __init__.py  config.py  parser.py  parser_utils.py  plugins.py
src/r2x_reeds/config/: defaults.json  file_mapping.json
src/r2x_reeds/models/: base.py  components.py
src/r2x_reeds/sysmods/: break_gens.py  cambium.py  ccs_credit.py  electrolyzer.py  emission_cap.py  hurdle_rate.py  imports.py  pcm_defaults.py
src/r2x_reeds/upgrader/: __init__.py  data_upgrader.py  file_tracker.csv  functions.py  helpers.py  upgrade_steps.py
tests/: conftest.py  test_config.py  test_excluded_techs.py  test_legacy_comparison.py  test_models_base.py  test_models_components.py  test_models_enums.py  test_parser_basic.py  test_parser_hydro.py  test_parser_integration.py  test_plugin_registration.py  test_sysmod_break_gens.py  test_sysmod_emission_cap.py  test_sysmod_hurdle_rate.py  test_sysmod_pcm_defaults.py  test_upgrader.py  test_upgrader_helpers.py  test_validation.py
tests/data/test_Pacific/: meta.csv
tests/data/test_Pacific_time_series/: 018b1aff-c6b8-4692-93da-3a03d1426747.arrow  019692b4-555d-4c85-abf9-3d5fd0299cfa.arrow  03a5ba72-dc24-46e1-8fc9-488c5f89b219.arrow  04bf9120-76f1-4d90-ac86-efb8245d8448.arrow  04f95f1d-5119-4d4c-975e-7ebda706d200.arrow  0a1922ab-1787-4efe-9c7c-ab0553b09a84.arrow  0a67179b-3b08-42b9-886f-f6a9ac38bd77.arrow  114fe167-94e4-4c0b-9fb8-348e6b2ac40c.arrow  12d48960-8dc0-44f5-bd32-b18a29633abf.arrow  151d974f-e2d1-4455-ac28-b3f33c7aa1c2.arrow  198432f5-efb9-4b41-8499-11918072c29f.arrow  1a659fed-7204-47f3-a829-4b81fe07b21d.arrow  1d460325-600a-4c8d-9bf4-032d65602325.arrow  1d6f6203-7bdf-43e0-a064-2f7349f0eb00.arrow  1de7f9e2-942a-4610-a2d9-33af5cb78fd1.arrow  2036a649-7dd0-4b12-823b-39d3a191914e.arrow  214f6b77-b981-4ce4-b06e-c5f72efabc28.arrow  26a6c20d-bc10-483d-a866-bba3b5e49654.arrow  29d32d7c-5dd6-480f-b1cf-fdc7b7c2bf52.arrow  (+120 more)
(+612 files in other folders)
